Update test to use MI report model